# qtscratch

./: CMakeLists.txt
interface/: CMakeLists.txt
interface/src/: Application.cpp  Application.h  main.cpp
